for gwen,fix windows db

--- a/flagserver/static/index.html
+++ b/flagserver/static/index.html
@@ -59,7 +59,7 @@
         getFlagJson: function () {
           var self = this
           // 这里加上随机数，避免缓存
-          axios.get('../../showflagjson?_t=' + Math.random())
+          axios.get('../showflagjson?_t=' + Math.random())
           .then(function (response) {
             if (typeof response.data === 'string') {
               try {
